# Tawa

./: .buildinfo  .dockerignore  LICENSE  README.html  README.md  README.rst  eototo.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  tawa.html
.doctrees/: README.doctree  environment.pickle  eototo.doctree  index.doctree  tawa.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  documentation.yaml  lint.yaml
Eototo/: README.rst  pyproject.toml
Eototo/eototo/commands/: git.py
Eototo/eototo/docker/: command_linkers.py  docker_utils.py
Eototo/eototo/utils/: common.py
Eototo/requirements/: requirements.txt
Tawa/: README.rst  pyproject.toml
Tawa/tawa/taw_cli/: taw_cli.py
Tawa/tawa/taw_cli/commands/: commands.py
Tawa/tawa/taw_cli/shell_hooks/: taw-cli
Tawa/tawa/taw_cli/utils/: shell_utils.py
doc/: index.rst
docs/: conf.py
docs/source/: conf.py  eototo.rst  index.rst  tawa.rst
eocli/: README.md  pyproject.toml
eocli/eocli/cli_interface/: options.py
eocli/eocli/utils/: docker_hooks.py
eocli/eocli_outer/: eocli_entry.py
eototo/: README.rst  pyproject.toml
eototo/eototo/: eototo.py
eototo/eototo/commands/: commands.py  git.py
eototo/eototo/docker/: command_linkers.py  docker_utils.py
eototo/eototo/utils/: cli_options.py  environment.py
eototo/requirements/: requirements.txt
eototo/tests/enso_cli/commands/: test_commands.py
eototo/tests/enso_cli/docker/: test_docker_utils.py
projects/examples/cifar10/: Dockerfile.project
runtime_environments/: environments.yml
runtime_environments/cuda12/: Dockerfile.base  Dockerfile.project
tawa/: README.rst  pyproject.toml  setup.py
tawa/requirements/: requirements.build.txt  requirements.datastore.txt  requirements.dev.txt  requirements.jadoo-extensions.txt  requirements.txt
tawa/tawa/: __init__.py
tawa/tawa/tawa_cli/commands/: commands.py
tawa/tawa/tawa_cli/commands/utils/: options.py
tawa/tawa/tawa_cli/shell_hooks/: taw-cli
tawa/tawa/tawa_inner_cli/: tawa_cli.py
