[tool.poetry]
name = "eototo"
version = "0.1.0"
description = ""
authors = ["isaak-willett <isaak.willett@woven-planet.global>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
click = {version = "^8.1.3", optional = true}
docker = {version = "^6.0.0", optional = true}
eocli = {path = "eocli", optional = true, develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.extras]
eocli = ["click", "docker", "eocli"]

