[project]
name = "tawa"
authors = [{name = "isaak-willett", email ="contact-tawa@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
taw-cli = "tawa.taw_cli.taw_cli:taw_cli"

[project.urls]
Homepage = "https://github.com/isaak-willett/Tawa"
Issues = "https://github.com/isaak-willett/Tawa/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements.dev.txt"] }, build = { file = ["requirements/requirements.build.txt"] } }
