[tool.poetry]
name = "eocli"
version = "0.1.0"
description = "eototo interface"
authors = ["Isaak Willett <willettisaak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
docker = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eocli = "eocli_outer.eocli_entry:eocli"
