[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tawa"
authors = [{name = "isaak-willett", email ="isaak.willett@woven-planet.global"}]
version = "0.13.2"
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
Homepage = "https://github.tmc-stargate.com/tawa/tawa"
Issues = "https://github.tmc-stargate.com/tawa/tawa/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements.dev.txt"] }, build = { file = ["requirements/requirements.build.txt"] }, datastore = { file = ["requirements/requirements.datastore.txt"] }, jadoo_extensions = { file = ["requirements/requirements.jadoo-extensions.txt"]} }

[project.scripts]
taw-cli = "tawa.tawa_inner_cli.tawa_cli:tawa_cli"
